# PRMD-CPP

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
app/: main.cpp
include/descmatrat/: charpoly.hpp  descmatrat.hpp  factor.hpp  fraction_free.hpp  frobenius.hpp  linalg.hpp  polynomial.hpp  primary.hpp  rational.hpp
tests/: test_charpoly.cpp  test_factor.cpp  test_fraction_free.cpp  test_frobenius.cpp  test_linalg.cpp  test_polynomial.cpp  test_primary.cpp  test_util.hpp
